Adjusted spacing and added hover states to buttons - Matched spacing on title andd subtitle to design - Fixed spacing of product title and price - Ensured that the products are spaced appropriately on all screen sizes

--- a/src/styles/components/product-card.scss
+++ b/src/styles/components/product-card.scss
@@ -3,6 +3,7 @@
   flex: 1 1 percentage(1 / 2);
   padding-left: $grid-gutter/2;
   padding-right: $grid-gutter/2;
+  padding-bottom: 20px;
 
   @include media-query($medium-up) {
     flex: 1 1 percentage(1 / 4);
@@ -22,6 +23,7 @@
       bottom: 18px;
       left: 18px;
       right: 18px;
+      display: none;
 
       .button {
         padding: unset;
@@ -29,6 +31,39 @@
         padding-bottom: 14px;
         width: 100%;
       }
+    }
+
+    @include media-query($medium-up) {
+      &:hover {
+        .product-card__button-container {
+          display: block;
+        }
+      }
+    }
+  }
+
+  .product-card__product-title {
+    color: #003366;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    margin: 8px 0;
+
+    @include media-query($medium-up) {
+      font-size: 21px;
+      line-height: 26px;
+      margin: 16px 0 6px;
+    }
+  }
+
+  .product-card__product-price {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 18px;
+
+    @include media-query($medium-up) {
+      font-size: 18px;
+      line-height: 26px;
     }
   }
 }
