--- a/src/styles/core/typography.scss
+++ b/src/styles/core/typography.scss
@@ -36,6 +36,10 @@ a:focus {
   color: inherit;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   font-size: 28px;
   line-height: 34px;
