--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -51,7 +51,8 @@ $transition-timing: ease-in-out;
 $grid-medium: 46.85em;
 $grid-large: 61.85em;
 $grid-widescreen: 87.5em;
-$grid-max-width: 73.75em;
+$grid-max-width: 85.4em;
+$grid-max-width-medium: 90%;
 $grid-gutter: 20px;
 $grid-gutter-large: 37px;
 
